--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://drewuncle863724lu:d28M5Xj8F6KeIyXW@fooddelivery.wggad.mongodb.net/?retryWrites=true&w=majority&appName=foodDelivery"
+SECRET_KEY="my_secret_key"
