failed to resetpassword

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL="mongodb+srv://drewuncle863724lu:d28M5Xj8F6KeIyXW@fooddelivery.wggad.m
 SECRET_KEY="my_secret_key"
 EMAIL_USER="nomnomfoods837@gmail.com"
 EMAIL_PASS="lxzixjntnnqekmnp"
+NEXT_PUBLIC_BACKEND_URL= https: //food-delivery-backend.vercel.app
