--- a/frontendclient/package.json
+++ b/frontendclient/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.2.6",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,7 +28,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "nuqs": "^2.4.1",
     "postcss": "^8",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
