--- a/frontendclient/package.json
+++ b/frontendclient/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@heroui/skeleton": "^2.2.10",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
