--- a/frontendclient/package.json
+++ b/frontendclient/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/skeleton": "^2.2.10",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-google-maps/api": "^2.20.6",
@@ -22,6 +23,7 @@
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shadcn": "^2.4.0-canary.17",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
